# pm-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/pm_agent/: cli.py  config.py  fees.py
src/pm_agent/clients/: kalshi_rest.py  polymarket_clob.py  polymarket_gamma.py  rate_limit.py  schemas.py
src/pm_agent/collectors/: market_discovery.py  orderbook_collector.py
src/pm_agent/db/: queries.py  repo.py  schema.sql
src/pm_agent/db/migrations/: 02_phase_b.sql  03_phase_cd.sql
src/pm_agent/matching/: contract_matcher.py
src/pm_agent/replay/: arb_engine.py  diagnostics.py  engine.py  fill_models.py
src/pm_agent/scanners/: interfaces.py
src/pm_agent/scanners/stubs/: arb.py  incumbent.py  narrative_yes_fade.py  pre_resolution_creep.py
src/pm_agent/sizing/: kelly.py
systemd/: pm-agent-arb.service  pm-agent-discovery.service  pm-agent-orderbook.service
