[project]
name = "pm-agent"
version = "0.1.0"
description = "Prediction market trading agent — Phase A: data + replay engine"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "websockets>=12.0",
    "asyncio-mqtt>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary,pool]>=3.2",
    "tenacity>=8.3",
    "click>=8.1",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
pm-agent = "pm_agent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/pm_agent"]
